--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,13 +1,13 @@
-# ???????? ?????? DB (Data source)
+# Источник данных DB (Data source)
 hibernate.driver_class=org.postgresql.Driver
 hibernate.connection.url=jdbc:postgresql://localhost:5544/hibernate_demo
 hibernate.connection.user=user
 hibernate.connection.password=qwerty
 
-# ???????????? Hibernate
-## ????? ??? ?? - postgresql
+# Конфигурация Hibernate
+## Какой тип БД - postgresql
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-## ?????????? ? ??????? ???????????? sql
+## Показывать в консоле генерируемый sql
 hibernate.show_sql=true
-## ??? ????????????
+## Без подробностей
 hibernate.current_session_context_class=thread
